--- a/comida/foodmine-course/src/app/home/home.component.html
+++ b/comida/foodmine-course/src/app/home/home.component.html
@@ -1,8 +1,14 @@
 <app-search></app-search>
 <app-tags></app-tags>
-<ul>
+<app-not-found
+  [visible]="!foods || foods.length <= 0"
+  [notFoundMessage]="'No food found'"
+  [resetLinkRoute]="'/'"
+  [resetlinkText]="'Go to home page'"
+></app-not-found>
+<ul *ngIf="foods">
   <li *ngFor="let food of foods">
-    <a href="#">
+    <a routerLink="/food/{{ food.id }}">
       <img src="{{ food.imageUrl }}" alt="" />
       <div class="content">
         <div class="name">
